# ransomware_poc

./: CMakeLists.txt  build.py
.github/workflows/: msys2.yml
src/: main.cpp
